@@ -8,7 +8,6 @@ package com.xiyu.bid.project.core;
 import com.xiyu.bid.entity.RoleProfileCatalog;
 
 import java.util.Set;
-import java.util.TreeSet;
 
 /**
  * 项目转移新负责人角色校验策略。
@@ -17,20 +16,19 @@ import java.util.TreeSet;
  * + {@link RoleProfileCatalog#SALES_CODE}（bid-projectLeader）。
  * </p>
  * <p>
- * 使用大小写不敏感集合以兼容 OSS 同步可能传入的不同大小写角色码
- * （对齐 Constitution V. OSS Integration 大小写安全规则）。
+ * 角色码来自被转移人 DB {@code role_profile} 快照（与 UserPicker 选人数据源一致），
+ * 而非 OSS 登录缓存。校验使用大小写敏感精确匹配（Constitution / project_memory 硬约束：
+ * 禁止在代码任何位置对 roleCode 做大小写归一化）。
  * </p>
  */
 public final class ProjectTransferRolePolicy {
 
-    private static final Set<String> VALID_NEW_OWNER_ROLES;
-
-    static {
-        TreeSet<String> set = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-        set.addAll(RoleProfileCatalog.GLOBAL_ACCESS_ROLES);
-        set.add(RoleProfileCatalog.SALES_CODE);
-        VALID_NEW_OWNER_ROLES = java.util.Collections.unmodifiableSet(set);
-    }
+    private static final Set<String> VALID_NEW_OWNER_ROLES = Set.of(
+            RoleProfileCatalog.ADMIN_CODE,
+            RoleProfileCatalog.BID_ADMIN_CODE,
+            RoleProfileCatalog.BID_LEAD_CODE,
+            RoleProfileCatalog.SALES_CODE
+    );
 
     private ProjectTransferRolePolicy() {
     }
@@ -38,7 +36,7 @@ public final class ProjectTransferRolePolicy {
     /**
      * 校验角色码是否为合法的项目转移新负责人角色。
      *
-     * @param roleCode 角色码（来自 EffectiveRoleResolver.resolveRoleCode）
+     * @param roleCode 角色码（来自被转移人 DB role_profile 快照）
      * @return true 如果角色为 admin//bidAdmin/bid-TeamLeader/bid-projectLeader 之一
      */
     public static boolean isValidNewOwnerRole(String roleCode) {
